<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="product"
                type="com.davlop.hottest.data.model.Product"/>
    </data>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/card_rv_item__big_height"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_list_item_product_big"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#1A000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_image"/>

            <TextView
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{product.name}"
                    tools:text="Product Name"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_image"/>

            <TextView
                    android:id="@+id/product_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{product.brand}"
                    android:maxLines="1"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_name"
                    tools:text="Product Brand"/>

            <com.borjabravo.readmoretextview.ReadMoreTextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{product.description}"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:trimMode="trimModeLength"
                    app:trimLength="65"
                    app:trimExpandedText="@string/show_less"
                    app:layout_constraintStart_toStartOf="parent"
                    app:colorClickableText="@color/primaryLightColor"
                    app:layout_constraintTop_toBottomOf="@+id/product_brand"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bn_buy_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:icon="@drawable/ic_buy_product"
                    android:text="@string/buy_product"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/product_description"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bn_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:icon="@drawable/ic_favorites_not_24px"
                    android:text="@string/add_to_favorites"
                    app:layout_constraintStart_toEndOf="@id/bn_buy_product"
                    app:layout_constraintTop_toBottomOf="@id/product_description"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bn_favorites_added"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rippleColor="@color/white"
                    android:visibility="gone"
                    app:icon="@drawable/ic_check_black_24dp"
                    android:text="@string/favorites_added"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:layout_constraintStart_toEndOf="@id/bn_buy_product"
                    app:layout_constraintTop_toBottomOf="@id/product_description"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>
