<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".ui.explore.HeatLevelFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!-- Extreme Products -->
        <TextView
                android:id="@+id/tv_extreme_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/extreme_products"
                android:textColor="#000000"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/tv_view_all_extreme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:paddingEnd="32dp"
                android:text="@string/view_all"
                android:textColor="@color/primaryDarkColor"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rv_extreme_products"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_extreme_products"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rv_home_height"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_extreme_title"/>

        <!-- Hottest Products -->
        <TextView
                android:id="@+id/tv_hottest_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/hottest_products"
                android:textColor="#000000"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_extreme_products"/>

        <TextView
                android:id="@+id/tv_view_all_hottest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:paddingEnd="32dp"
                android:text="@string/view_all"
                android:textColor="@color/primaryDarkColor"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rv_hottest_products"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_hottest_products"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rv_home_height"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_hottest_title"/>

        <!-- Hot Products -->
        <TextView
                android:id="@+id/tv_hot_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/hot_products"
                android:textColor="#000000"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_hottest_products"/>

        <TextView
                android:id="@+id/tv_view_all_hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:paddingEnd="32dp"
                android:text="@string/view_all"
                android:textColor="@color/primaryDarkColor"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rv_hot_products"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_hot_products"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rv_home_height"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_hot_title"/>

        <!-- Medium Products -->
        <TextView
                android:id="@+id/tv_medium_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/medium_products"
                android:textColor="#000000"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_hot_products"/>

        <TextView
                android:id="@+id/tv_view_all_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:paddingEnd="32dp"
                android:text="@string/view_all"
                android:textColor="@color/primaryDarkColor"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rv_medium_products"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_medium_products"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rv_home_height"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_medium_title"/>

        <!-- Mild Products -->
        <TextView
                android:id="@+id/tv_mild_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/mild_products"
                android:textColor="#000000"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_medium_products"/>

        <TextView
                android:id="@+id/tv_view_all_mild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:paddingEnd="32dp"
                android:text="@string/view_all"
                android:textColor="@color/primaryDarkColor"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rv_mild_products"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_mild_products"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rv_home_height"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_mild_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>