<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".ui.home.HomeFragment"
             android:id="@+id/fragment_container_home">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!-- Top Products -->
        <TextView
                android:id="@+id/tv_top_products_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/tv_top_products"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/tv_view_all_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:paddingEnd="32dp"
                android:text="@string/view_all"
                android:textColor="@color/primaryDarkColor"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rv_top_products"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_products"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rv_home_height"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_top_products_title"/>

        <!-- Hottest-->
        <TextView
                android:id="@+id/tv_hottest_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/hottest_products"
                android:textColor="#000000"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_top_products"/>

        <TextView
                android:id="@+id/tv_view_all_hottest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:paddingEnd="32dp"
                android:text="@string/view_all"
                android:textColor="@color/primaryDarkColor"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rv_hottest_products"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_hottest_products"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rv_home_height"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_hottest_title"/>

        <!-- Recommended -->
        <TextView
                android:id="@+id/tv_recommended_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/tv_recommended_products"
                android:textColor="#000000"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_hottest_products"/>

        <TextView
                android:id="@+id/tv_view_all_recommended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:paddingEnd="32dp"
                android:text="@string/view_all"
                android:textColor="@color/primaryDarkColor"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rv_recommended"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommended"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rv_home_height"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recommended_title"/>

        <!-- Recently Added -->
        <TextView
                android:id="@+id/tv_recently_added_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_margin"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/tv_recently_added"
                android:textColor="#000000"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_recommended"/>

        <TextView
                android:id="@+id/tv_view_all_recently"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:paddingEnd="32dp"
                android:text="@string/view_all"
                android:textColor="@color/primaryDarkColor"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rv_recently_added"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recently_added"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rv_home_height"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recently_added_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>